--- a/locales/hu.yaml
+++ b/locales/hu.yaml
@@ -1,3 +1,15 @@
 ---
 hu:
-  welcome: "Újra eljött a Free Fest ideje!"
+  menu:
+    home: Főoldal
+    venue: Helyszín
+    schedule: Program
+    about_us: Rólunk
+  paths:
+    hero_img: images/freefest_hero.webp
+  home:
+    description: |
+      Mező barátommal volt egy álmunk és 20 évvel ezelőtt elkezdtük megszervezni a Free Fest Underground Jamboree-t.
+      Nem kívántunk részt venni a zenei ipar üzleti világában, ezért a fellépőktől kezdve a szervezőkön át azon dolgoztunk, hogy közösségi munkával létrejöhessen egy ingyenes fesztivál, amit nem a piaci érdekek mozgattak.
+      Fantasztikus volt veletek 8x átélni ezt az élményt! Köszönjük Nektek!
+      Sajnos Mező már nincs köztünk és egy időre elcsendesedtünk, de most újra itt vagyunk és Mező emléke előtt is tisztelegve szeretnénk veletek újra eltölteni egy hosszú hétvégét!
