--- a/locales/en.yaml
+++ b/locales/en.yaml
@@ -4,7 +4,7 @@ en:
     home: Home
     venue: Venue
     schedule: Schedule
-    about_us: About Us
+    contact: Contact
   paths:
     hero_img: ../images/freefest_hero.webp
     mezo_img: ../images/mezo.jpg
@@ -14,3 +14,6 @@ en:
       We didn’t want to be part of the music industry's business world, so from the performers to the organizers, we worked to create a free festival through community effort, one that wasn’t driven by market interests.
       It was amazing to experience this with you eight times! Thank you all!
       Sadly, Mező is no longer with us, and we went quiet for a while, but now we’re back — and we want to spend another long weekend with you, honoring Mező’s memory as well.
+  contact:
+    contact_us: Contact us
+    freefest_on_facebook: Free Fest on Facebook
