--- a/locales/hu.yaml
+++ b/locales/hu.yaml
@@ -14,6 +14,9 @@ hu:
       Nem kívántunk részt venni a zenei ipar üzleti világában, ezért a fellépőktől kezdve a szervezőkön át azon dolgoztunk, hogy közösségi munkával létrejöhessen egy ingyenes fesztivál, amit nem a piaci érdekek mozgattak.
       Fantasztikus volt veletek 8x átélni ezt az élményt! Köszönjük Nektek!
       Sajnos Mező már nincs köztünk és egy időre elcsendesedtünk, de most újra itt vagyunk és Mező emléke előtt is tisztelegve szeretnénk veletek újra eltölteni egy hosszú hétvégét!
+  venue:
+    venue_name: Zöld Pecsét Kávézó és Borbár
+    venue_address: Eger, Fő utca 1, 3300
   contact:
     contact_us: Lépj velünk kapcsolatba
     freefest_on_facebook: Free Fest a Facebook-on
