update contact information

--- a/locales/hu.yaml
+++ b/locales/hu.yaml
@@ -20,3 +20,4 @@ hu:
   contact:
     contact_us: Lépj velünk kapcsolatba
     freefest_on_facebook: Free Fest a Facebook-on
+    freefest_on_instagram: Free Fest az Instagram-on
