--- a/locales/en.yaml
+++ b/locales/en.yaml
@@ -20,3 +20,4 @@ en:
   contact:
     contact_us: Contact us
     freefest_on_facebook: Free Fest on Facebook
+    freefest_on_instagram: Free Fest on Instagram
