Implement hero text component as seen on the free fest facebook profile image

--- a/locales/en.yaml
+++ b/locales/en.yaml
@@ -8,6 +8,8 @@ en:
   paths:
     hero_img: ../images/freefest_hero.webp
     mezo_img: ../images/mezo.jpg
+  hero:
+    date: 19 – 21 June
   home:
     description: |
       My friend Mező and I had a dream, and 20 years ago, we started organizing the Free Fest Underground Jamboree.
