--- a/locales/en.yaml
+++ b/locales/en.yaml
@@ -5,6 +5,7 @@ en:
     venue: Venue
     schedule: Schedule
     contact: Contact
+    memories: Memories
   paths:
     hero_img: ../images/freefest_hero.webp
     mezo_img: ../images/mezo.jpg
@@ -29,3 +30,5 @@ en:
     contact_us: Contact us
     freefest_on_facebook: Free Fest on Facebook
     freefest_on_instagram: Free Fest on Instagram
+  buttons:
+    visit: Visit
