Update photo album for memories

--- a/locales/en.yaml
+++ b/locales/en.yaml
@@ -30,5 +30,7 @@ en:
     contact_us: Contact us
     freefest_on_facebook: Free Fest on Facebook
     freefest_on_instagram: Free Fest on Instagram
+  memories:
+    description: From previous Free Fests
   buttons:
     visit: Visit
