--- a/locales/hu.yaml
+++ b/locales/hu.yaml
@@ -30,5 +30,7 @@ hu:
     contact_us: Lépj velünk kapcsolatba
     freefest_on_facebook: Free Fest a Facebook-on
     freefest_on_instagram: Free Fest az Instagram-on
+  memories:
+    description: A korábbi Free Fest-ekről
   buttons:
     visit: Megnézem
