--- a/locales/hu.yaml
+++ b/locales/hu.yaml
@@ -20,6 +20,9 @@ hu:
   venue:
     venue_name: Zöld Pecsét Kávézó és Borbár
     venue_address: Eger, Fő utca 1, 3300
+    camping:
+      title: Sátrazás
+      description: A helyszínen van lehetőség sátrazásra, az erre kijelölt területen.
   schedule:
     disclaimer: |
       A program változhat.
