--- a/locales/en.yaml
+++ b/locales/en.yaml
@@ -29,6 +29,24 @@ en:
     stages:
       outdoor: Mező stage - outdoor
       indoor: Total stage - indoor
+    cultural_events:
+      title: Cultural events (2025.06.21)
+      nem_az_a_punk:
+        title: Nem az a punk, aki… book presentation
+        description: |
+          Nem az a punk, aki…
+          Book launch and themed discussion about Total and Free Fest:
+          Tamás Rupaszov, Misi Juhász (Total), Réka Szabó (Free Fest), Péter Ágai (Free Fest).
+          Language of the discussion is Hungarian.
+      comic_books:
+        title: Comic book presentation
+        description: |
+          "Henry Rollins and The Exploited" – or punk icons in Hungarian comics
+          Master-Lab Comics has already created several comic books about punk icons.
+          Their publications present the lives of individual performers or the punk movement and ideology itself in a unique way.
+          The nearly one-hour presentation explores the creation of these comics with the participation of the creators.
+          The informal discussion is led by graphic artist Csaba Mester from The Bedlam, and Labi, the writer of the comics and a founding member of Tankcsapda.
+          Language of the discussion is Hungarian.
   contact:
     contact_us: Contact us
     freefest_on_facebook: Free Fest on Facebook
