Update cultural event description as requested

--- a/locales/en.yaml
+++ b/locales/en.yaml
@@ -32,10 +32,9 @@ en:
     cultural_events:
       title: Cultural events (2025.06.21)
       nem_az_a_punk:
-        title: Nem az a punk, aki… book presentation
+        title: Nem az a punk, aki… On Tour
         description: |
-          Nem az a punk, aki…
-          Book launch and themed discussion about Total and Free Fest:
+          Conversation about the decades of Total and Free Fest with former and current organizers.
           Tamás Rupaszov, Misi Juhász (Total), Réka Szabó (Free Fest), Péter Ágai (Free Fest).
           Language of the discussion is Hungarian.
       comic_books:
