--- a/locales/hu.yaml
+++ b/locales/hu.yaml
@@ -32,10 +32,9 @@ hu:
     cultural_events:
       title: Kulturális programok (2025.06.21)
       nem_az_a_punk:
-        title: Nem az a punk, aki… könyvbemutató
+        title: Nem az a punk, aki… On Tour
         description: |
-          Nem az a punk, aki…
-          Könyvbemutató és tematikus beszélgetés a Totalról és a Free Festről:
+          Beszélgetés a Total és a Free Fest évtizedeiről az egykori és mai szervezőkkel.
           Rupaszov Tamás, Juhász Misi (Total), Szabó Réka (Free Fest), Ágai Péter (Free Fest)
       comic_books:
         title: Képregény bemutató
